<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/title"
        android:layout_width="748dp"
        android:layout_height="294dp"
        android:background="@drawable/tittle"
        android:contentDescription="@string/game_tittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/login"
        android:layout_width="462dp"
        android:layout_height="82dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/registry"
        android:layout_width="462dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/registry"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/scores"
        android:layout_width="462dp"
        android:layout_height="82dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/score"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registry"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>