<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Activities.Difficulty">

    <ImageView
        android:id="@+id/imageViewDifficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/image_difficulty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/difficulty" />

    <Button
        android:id="@+id/buttonsBack"
        android:layout_width="wrap_content"
        android:layout_height="63dp"
        android:layout_marginTop="156dp"
        android:background="@drawable/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEasy"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/difficulty_easy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDifficulty"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/imageViewDifficulty"
        app:layout_constraintTop_toTopOf="@+id/imageViewDifficulty" />

    <Button
        android:id="@+id/btnMedium"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="86dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/difficulty_medium"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDifficulty"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/imageViewDifficulty"
        app:layout_constraintTop_toBottomOf="@+id/btnEasy" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="262dp"
        android:layout_height="50dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="53dp"
        android:background="@drawable/buttons_default"
        android:elevation="10dp"
        android:fontFamily="@font/slackey"
        android:text="@string/difficulty_hard"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewDifficulty"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDifficulty"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="@+id/imageViewDifficulty"
        app:layout_constraintTop_toBottomOf="@+id/btnMedium"
        app:layout_constraintVertical_bias="0.378" />

    <TextView
        android:id="@+id/textDifficulty"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="135dp"
        android:fontFamily="@font/slackey"
        android:text="@string/text_difficulty"
        android:textAlignment="viewStart"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewDifficulty"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/imageViewDifficulty"
        app:layout_constraintTop_toTopOf="@+id/imageViewDifficulty" />

</androidx.constraintlayout.widget.ConstraintLayout>