<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".Activities.Login">


    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/tittle"
        android:contentDescription="@string/game_tittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonsBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/singinImg"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/singin_popup"
        android:contentDescription="@string/game_tittle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.141" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/singinImg"
        app:layout_constraintEnd_toEndOf="@+id/singinImg"
        app:layout_constraintStart_toStartOf="@+id/singinImg"
        app:layout_constraintTop_toTopOf="@+id/singinImg"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/loginPlayertxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackey"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/name_user"
            android:textColor="#FF5722"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loginUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:autofillHints="Username"
            android:background="#FFFFFF"
            android:ems="15"
            android:fontFamily="@font/slackey"
            android:gravity="start"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/loginPasswordtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/slackey"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/password"
            android:textColor="#FF5722"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Password"
            android:background="#FFFFFF"
            android:ems="15"
            android:gravity="start"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons_default"
            android:fontFamily="@font/slackey"
            android:text="@string/iniciar_sesion"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>